--- a/src/newtons-light-bulb/style.styl
+++ b/src/newtons-light-bulb/style.styl
@@ -13,17 +13,17 @@
   --ceiling 50
   --bulb-hue 60
 
-  @media(prefers-color-scheme: light)
-    --chord-lightness 40
-    --bg-lightness 75
-    --glass-lightness 80
-    --glass-saturation 0
-    --filament-saturation 0
-    --filament-lightness 70
-    --fitting-lightness 80
-    --light-alpha 0
-    --ceiling 40
-    --bulb-hue 60
+  // @media(prefers-color-scheme: light)
+  //   --chord-lightness 40
+  //   --bg-lightness 90
+  //   --glass-lightness 80
+  //   --glass-saturation 0
+  //   --filament-saturation 0
+  //   --filament-lightness 70
+  //   --fitting-lightness 80
+  //   --light-alpha 0
+  //   --ceiling 40
+  //   --bulb-hue 60
 
 body
   background 'hsl(215, 100%, %s)' % calc(var(--bg-lightness) * 1%)
@@ -71,6 +71,7 @@ svg
     fill none
     stroke 'hsl(%s, 100%, 50%)' % var(--bulb-hue)
     stroke-width 2
+    opacity 0
 
 
 // EASTER EGG
@@ -138,3 +139,28 @@ svg
         --bulb-hue 50
       .light-bulb--6
         --bulb-hue 60
+
+.banner-container
+  position fixed
+  bottom 0
+  left 50%
+  transform translate(-50%, 0)
+
+.hue-banner
+  color 'hsl(%s, 100%, 50%)' % var(--hue, 0)
+  border-color 'hsl(%s, 100%, 50%)' % var(--hue, 0)
+  border-style solid
+  border-width 4px
+  border-radius 4px
+  margin-bottom 1rem
+  padding 1rem
+  font-weight bold
+  font-family -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  line-height 1.5
+  animation fadeToBlack 0.5s 1s both
+
+@keyframes fadeToBlack
+  to
+    opacity 0
+
+
