--- a/src/dismantle-text-gsap/dev.pug
+++ b/src/dismantle-text-gsap/dev.pug
@@ -12,4 +12,6 @@ include dot-four.pug
 .crane.crane--horizontal.crane--horizontal-left
 .crane.crane--horizontal.crane--horizontal-right
 .crane.crane--vertical
-img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/logo-man.svg')
+.logo-container
+  .crane.crane--horizontal.crane--horizontal-left
+  img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/logo-man.svg')
