--- a/src/dismantle-text-gsap/style.styl
+++ b/src/dismantle-text-gsap/style.styl
@@ -1,12 +1,18 @@
 *
   box-sizing border-box
 
+:root
+  --lightness 0
+
 body
   text-align       center
   display flex
   align-items center
   justify-content center
-  background white
+  background 'hsl(0, 0%, %s)' % (calc((100 - var(--lightness)) * 1%))
+
+  @media(prefers-color-scheme dark)
+    --lightness 100
 
 .dismantle
 .dot
@@ -20,10 +26,25 @@ body
 img
   position absolute
   height 30vmin
+  top 50%
+  left 50%
+  transform translate(-50%, -50%)
 
-.t__cross
+.logo-container
+  position absolute
+  top 50%
+  left 50%
+  transform translate(-50%, -50%)
+
+  .crane
+    right 50%
+    top 50%
+    transform translate(0, -50%)
+
+svg
   path
-    fill black
+  rect
+    fill 'hsl(0, 0%, %s)' % (calc(var(--lightness) * 1%))
 
 .crane
   position absolute
@@ -33,13 +54,7 @@ img
   &--vertical
     height 100vh
     width 0.5vmin
-    transform translate(-50%, -99%)
 
   &--horizontal
     width 100vw
     height 0.5vmin
-
-    &-left
-      transform translate(-100%, -50%)
-    &-right
-      transform translate(0, -50%)
