feat: clean up text svgs for dismantling text

--- a/src/dismantle-text-gsap/cross-one.pug
+++ b/src/dismantle-text-gsap/cross-one.pug
@@ -3,4 +3,4 @@ svg.cross(viewbox='0 0 162.80969 60.440757')
     g
       g.t
         g.t__cross
-          rect#rect938(ry='0' y='146.74834' x='18.432337' height='2.348175' width='6.1350183' style="font-style:normal;font-variant:normal;font-weight:800;font-stretch:normal;font-size:medium;line-height:1.25;font-family:'.SF Compact Display';-inkscape-font-specification:'.SF Compact Display, Ultra-Bold';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;fill-opacity:1;stroke:none;stroke-width:1.85935318;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1")
+          rect#rect938(ry='0' y='146.74834' x='18.432337' height='2.348175' width='6.1350183')
