--- a/src/dismantle-text-gsap/dot-one.pug
+++ b/src/dismantle-text-gsap/dot-one.pug
@@ -3,4 +3,4 @@ svg.dot.dot--one(viewbox='0 0 162.80969 60.440757')
     g
       g.i
         g.i__dot
-          path#path910(d='m 41.219476,121.85293 c -0.909501,0 -1.645371,0.55397 -1.645371,1.44694 0,0.9095 0.73587,1.46348 1.645371,1.46348 0.90125,0 1.63711,-0.55398 1.63711,-1.46348 0,-0.89297 -0.73586,-1.44694 -1.63711,-1.44694 z' style="font-style:normal;font-variant:normal;font-weight:800;font-stretch:normal;font-size:16.93333244px;line-height:1.25;font-family:'.SF Compact Display';-inkscape-font-specification:'.SF Compact Display, Ultra-Bold';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;fill-opacity:1;stroke:none;stroke-width:0.26458332")
+          path#path910(d='m 41.219476,121.85293 c -0.909501,0 -1.645371,0.55397 -1.645371,1.44694 0,0.9095 0.73587,1.46348 1.645371,1.46348 0.90125,0 1.63711,-0.55398 1.63711,-1.46348 0,-0.89297 -0.73586,-1.44694 -1.63711,-1.44694 z')
