--- a/src/image-to-conway/style.styl
+++ b/src/image-to-conway/style.styl
@@ -2,6 +2,10 @@
   box-sizing border-box
   animation  fadeIn .5s
 
+:root
+  --width 400
+  --height 200
+
 body
   min-height 100vh
   display flex
@@ -10,10 +14,12 @@ body
   justify-content center
 
 canvas
-  height 200px
-  width 200px
+img
+  height calc(var(--height) * 1px)
+  width calc(var(--width) * 1px)
 
 img
-  height 200px
-  width 200px
   object-fit cover
+
+img:not([src])
+  display none
