feat: ambilight updates + fixes

--- a/src/ambilight/dev.pug
+++ b/src/ambilight/dev.pug
@@ -5,9 +5,8 @@ input#lights(type='checkbox')
 .backdrop
 .scene
   .tv
-    video#dupe.ambilight(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/605876/video-player-video.mp4' autoplay loop)
-    video#player.screen(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/605876/video-player-video.mp4' autoplay loop controls)
-    button
+    video#dupe.ambilight(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/605876/video-player-video.mp4' muted playsinline autoplay loop)
+    video#player.screen(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/605876/video-player-video.mp4' muted playsinline autoplay loop)
   .tv__unit.tv-unit
     .tv-unit__door
     .tv-unit__door
