feat: imported SVG ready for manipulation

--- a/src/rainbow-cloud/style.styl
+++ b/src/rainbow-cloud/style.styl
@@ -7,8 +7,8 @@ body
   justify-content center
   min-height 100vh
 
-.rainbow-cloud
-  width 50vmin
+// .rainbow-cloud
+//   width 50vmin
 
 .cloud__body
   fill 'hsl(0, 0%, %s)' % calc(var(--cloud-lightness, 65) * 1%)
