feat: implement rainbow-toggle

--- a/src/rainbow-cloud/index.pug
+++ b/src/rainbow-cloud/index.pug
@@ -2,4 +2,5 @@ extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
   script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js")
+  script(src='MorphSVGPlugin.min.js')
   script(src='GSDevTools.min.js')
