--- a/src/rainbow-cloud/rainbow-final.pug
+++ b/src/rainbow-cloud/rainbow-final.pug
@@ -1,20 +1,21 @@
-svg.rainbow-cloud(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 378.42 215.18' height='813.26' width='1430.24')
+svg.rainbow-cloud(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 378.42 215.18')
   defs
     clipPath#rainbow-clip
       rect(x="0" y="0" height="168" width="1500")
   g.rainbow__wrapper.rainbow-cloud__rainbow(clip-path="url(#rainbow-clip)")
-    g.rainbow(stroke='#000' stroke-width='1.32' stroke-linecap='round' stroke-linejoin='round')
-      path(d='M188.33 37.15A132.3 132.3 0 0056.04 169.44h13.23A119.06 119.06 0 01188.33 50.38 119.06 119.06 0 01307.4 169.44h13.23a132.3 132.3 0 00-132.29-132.3z' fill='#ff2a2a')
-      path(d='M188.33 43.76A125.68 125.68 0 0062.66 169.44h13.22A112.45 112.45 0 01188.33 56.99a112.45 112.45 0 01112.45 112.45h13.23A125.68 125.68 0 00188.33 43.76z' fill='#ffd42a')
-      path(d='M188.33 50.38A119.06 119.06 0 0069.27 169.44H82.5A105.83 105.83 0 01188.33 63.6a105.83 105.83 0 01105.84 105.84h13.23A119.06 119.06 0 00188.33 50.38z' fill='#f60')
-      path(d='M188.33 56.99A112.45 112.45 0 0075.88 169.44h13.23a99.22 99.22 0 0199.22-99.22 99.22 99.22 0 0199.22 99.22h13.23A112.45 112.45 0 00188.33 56.99z' fill='#6f0')
-      path(d='M188.33 63.6A105.83 105.83 0 0082.5 169.44h13.23a92.6 92.6 0 0192.6-92.6 92.6 92.6 0 0192.6 92.6h13.24A105.83 105.83 0 00188.33 63.6z' fill='#00aad4')
-      path(d='M188.33 70.22a99.22 99.22 0 00-99.22 99.22h13.23a85.99 85.99 0 0186-86 85.99 85.99 0 0185.98 86h13.23a99.22 99.22 0 00-99.22-99.22z' fill='purple')
-      path(d='M188.33 76.83a92.6 92.6 0 00-92.6 92.6h6.61a85.99 85.99 0 0186-85.98 85.99 85.99 0 0185.98 85.99h6.62a92.6 92.6 0 00-92.6-92.6z' fill='#f0f')
-  g.cloud__wrapper.cloud__wrapper--baby(style='display: none;')
+    g.rainbow(stroke-linecap='round' stroke-linejoin='round')
+      path.rainbow__beam.rainbow__red(d='M188.33 37.15A132.3 132.3 0 0056.04 169.44h13.23A119.06 119.06 0 01188.33 50.38 119.06 119.06 0 01307.4 169.44h13.23a132.3 132.3 0 00-132.29-132.3z')
+      path.rainbow__beam.rainbow__orange(d='M188.33 43.76A125.68 125.68 0 0062.66 169.44h13.22A112.45 112.45 0 01188.33 56.99a112.45 112.45 0 01112.45 112.45h13.23A125.68 125.68 0 00188.33 43.76z')
+      path.rainbow__beam.rainbow__yellow(d='M188.33 50.38A119.06 119.06 0 0069.27 169.44H82.5A105.83 105.83 0 01188.33 63.6a105.83 105.83 0 01105.84 105.84h13.23A119.06 119.06 0 00188.33 50.38z')
+      path.rainbow__beam.rainbow__green(d='M188.33 56.99A112.45 112.45 0 0075.88 169.44h13.23a99.22 99.22 0 0199.22-99.22 99.22 99.22 0 0199.22 99.22h13.23A112.45 112.45 0 00188.33 56.99z')
+      path.rainbow__beam.rainbow__blue(d='M188.33 63.6A105.83 105.83 0 0082.5 169.44h13.23a92.6 92.6 0 0192.6-92.6 92.6 92.6 0 0192.6 92.6h13.24A105.83 105.83 0 00188.33 63.6z')
+      path.rainbow__beam.rainbow__indigo(d='M188.33 70.22a99.22 99.22 0 00-99.22 99.22h13.23a85.99 85.99 0 0186-86 85.99 85.99 0 0185.98 86h13.23a99.22 99.22 0 00-99.22-99.22z')
+      path.rainbow__beam.rainbow__violet(d='M188.33 76.83a92.6 92.6 0 00-92.6 92.6h6.61a85.99 85.99 0 0186-85.98 85.99 85.99 0 0185.98 85.99h6.62a92.6 92.6 0 00-92.6-92.6z')
+  g.cloud__wrapper.cloud__wrapper--baby
     g.cloud.rainbow__cloud.cloud--baby
-      path.cloud__body(d='M75.05 132.24a15.74 15.74 0 00-15.03 11.07 15.74 15.74 0 00-11.53 15.07 15.74 15.74 0 00-10 14.65 15.74 15.74 0 0015.75 15.74 15.74 15.74 0 0012.6-6.35 15.74 15.74 0 0012.61 6.35 15.74 15.74 0 008.21-2.33 15.74 15.74 0 008.2 2.33 15.74 15.74 0 0015.26-11.97 15.74 15.74 0 008.44-13.93 15.74 15.74 0 00-15.74-15.73 15.74 15.74 0 00-2.61.22 15.74 15.74 0 00-11.51-5.13 15.74 15.74 0 00-14.65-9.99z' stroke='#000' stroke-linecap='round' stroke-linejoin='round')
-      g.cloud__face(style='display: none;')
+      g.cloud__body
+        path(d='M75.05 132.24a15.74 15.74 0 00-15.03 11.07 15.74 15.74 0 00-11.53 15.07 15.74 15.74 0 00-10 14.65 15.74 15.74 0 0015.75 15.74 15.74 15.74 0 0012.6-6.35 15.74 15.74 0 0012.61 6.35 15.74 15.74 0 008.21-2.33 15.74 15.74 0 008.2 2.33 15.74 15.74 0 0015.26-11.97 15.74 15.74 0 008.44-13.93 15.74 15.74 0 00-15.74-15.73 15.74 15.74 0 00-2.61.22 15.74 15.74 0 00-11.51-5.13 15.74 15.74 0 00-14.65-9.99z' stroke='#000' stroke-linecap='round' stroke-linejoin='round')
+      g.cloud__face.cloud__face--thrilled
         g.cloud__eyes.cloud__eyes--thrilled
           path(fill="none" stroke="#000" stroke-linecap="round" stroke-width="1.5" stroke-linejoin="round" d='M63.8 164.67a2.26 2.26 0 012.25-2.22 2.26 2.26 0 012.26 2.22M94.16 165.12a2.26 2.26 0 012.26-2.23 2.26 2.26 0 012.26 2.23')
         g.cloud__mouth.cloud__mouth--thrilled
@@ -28,22 +29,24 @@ svg.rainbow-cloud(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 378.42 215.18'
           path(d='M-395.1 133.56a2.87 2.87 0 01-2.87 2.87 2.87 2.87 0 01-2.87-2.87 2.87 2.87 0 012.87-2.88 2.87 2.87 0 012.87 2.88z')
           path(d='M-398.1 132.5a.94.94 0 01-.93.93.94.94 0 01-.94-.93.94.94 0 01.94-.94.94.94 0 01.94.94z' fill='#fff')
         g.cloud__mouth.cloud__mouth--sad
-          path(d='M-417.09 138.7a4.02 3.28 0 010-.09 4.02 3.28 0 014.02-3.27 4.02 3.28 0 014.02 3.27h0a4.02 3.28 0 010 .09' fill='none' stroke='#000' stroke-width='1.32' stroke-linecap='round' stroke-linejoin='round')
-        //- g.cloud__mouth.cloud__mouth--happy
-        //-   path(d='M-409.05 135.35a4.02 3.28 0 010 .08 4.02 3.28 0 01-4.02 3.28 4.02 3.28 0 01-4.02-3.28h0a4.02 3.28 0 010-.08' fill='none' stroke='#000' stroke-width='1.32' stroke-linecap='round' stroke-linejoin='round')
+          path(d='M-417.09 138.7a4.02 3.28 0 010-.09 4.02 3.28 0 014.02-3.27 4.02 3.28 0 014.02 3.27h0a4.02 3.28 0 010 .09' fill='none' stroke-linecap='round' stroke-linejoin='round')
+        g.cloud__mouth.cloud__mouth--happy(style='display: none;')
+          path(d='M-409.05 135.35a4.02 3.28 0 010 .08 4.02 3.28 0 01-4.02 3.28 4.02 3.28 0 01-4.02-3.28h0a4.02 3.28 0 010-.08' fill='none' stroke-linecap='round' stroke-linejoin='round')
+      g.cloud__cheeks(transform='translate(494.14 30.3)')
         g.cloud__cheek.cloud__cheek--left
           circle(cx='-439.04' cy='136.66' r='2.71' fill='#faa' fill-opacity='.5')
         g.cloud__cheek.cloud__cheek--right
           circle(r='2.71' cy='136.66' cx='-387.1' fill='#faa' fill-opacity='.5')
   g.cloud__wrapper
     g.cloud.rainbow__cloud
-      path.cloud__body(d='M96.6 120.51a25.77 25.9 0 00-21.55 11.73 19.47 19.56 0 00-12.18-4.32 19.47 19.56 0 00-19.17 16.25 24.01 24.13 0 00-3.11-.22 24.01 24.13 0 00-24.02 24.13A24.01 24.13 0 0040.6 192.2a24.01 24.13 0 0010.3-2.37 19.47 19.56 0 0015.95 8.38 19.47 19.56 0 0013.42-5.41 19.47 19.56 0 0013.41 5.41 19.47 19.56 0 0014.94-7.03 19.47 19.56 0 0014.92 7.03A19.47 19.56 0 00143 178.66a19.47 19.56 0 00-8.18-15.91 19.47 19.56 0 002.13-8.85 19.47 19.56 0 00-17.5-19.46 25.77 25.9 0 00-22.85-13.93z' stroke='#000' stroke-linecap='round' stroke-linejoin='round')
-      //- g.cloud__face.cloud__face--thrilled(transform='translate(494.14 30.3)')
-      //-   g.cloud__eyes.cloud__eyes--thrilled
-      //-     path(d='M-430.34 134.37a2.26 2.26 0 012.26-2.23 2.26 2.26 0 012.25 2.23M-399.97 134.81a2.26 2.26 0 012.25-2.23 2.26 2.26 0 012.26 2.23' fill='none' stroke='#000' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round')
-      //-   g.cloud__mouth.cloud__mouth--thrilled
-      //-     path(d='M-417.58 134.64a4.68 4.68 0 000 .05 4.68 4.68 0 004.68 4.68 4.68 4.68 0 004.68-4.68 4.68 4.68 0 000-.05z')
-      //-     path(d='M-412.9 135.89a3.8 3.57 0 00-3.41 2 4.68 4.68 0 003.41 1.48 4.68 4.68 0 003.41-1.49 3.8 3.57 0 00-3.41-2z' fill='red')
+      g.cloud__body
+        path(d='M96.6 120.51a25.77 25.9 0 00-21.55 11.73 19.47 19.56 0 00-12.18-4.32 19.47 19.56 0 00-19.17 16.25 24.01 24.13 0 00-3.11-.22 24.01 24.13 0 00-24.02 24.13A24.01 24.13 0 0040.6 192.2a24.01 24.13 0 0010.3-2.37 19.47 19.56 0 0015.95 8.38 19.47 19.56 0 0013.42-5.41 19.47 19.56 0 0013.41 5.41 19.47 19.56 0 0014.94-7.03 19.47 19.56 0 0014.92 7.03A19.47 19.56 0 00143 178.66a19.47 19.56 0 00-8.18-15.91 19.47 19.56 0 002.13-8.85 19.47 19.56 0 00-17.5-19.46 25.77 25.9 0 00-22.85-13.93z' stroke='#000' stroke-linecap='round' stroke-linejoin='round')
+      g.cloud__face.cloud__face--thrilled(transform='translate(494.14 30.3)')
+        g.cloud__eyes.cloud__eyes--thrilled
+          path(d='M-430.34 134.37a2.26 2.26 0 012.26-2.23 2.26 2.26 0 012.25 2.23M-399.97 134.81a2.26 2.26 0 012.25-2.23 2.26 2.26 0 012.26 2.23' fill='none' stroke='#000' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round')
+        g.cloud__mouth.cloud__mouth--thrilled
+          path(d='M-417.58 134.64a4.68 4.68 0 000 .05 4.68 4.68 0 004.68 4.68 4.68 4.68 0 004.68-4.68 4.68 4.68 0 000-.05z')
+          path(d='M-412.9 135.89a3.8 3.57 0 00-3.41 2 4.68 4.68 0 003.41 1.48 4.68 4.68 0 003.41-1.49 3.8 3.57 0 00-3.41-2z' fill='red')
       g.cloud__face(transform='translate(494.14 30.3)')
         g.cloud__eye.cloud__eye--left
           path(d='M-425.3 133.56a2.87 2.87 0 01-2.87 2.87 2.87 2.87 0 01-2.87-2.87 2.87 2.87 0 012.87-2.88 2.87 2.87 0 012.88 2.88z')
@@ -52,9 +55,10 @@ svg.rainbow-cloud(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 378.42 215.18'
           path(d='M-395.1 133.56a2.87 2.87 0 01-2.87 2.87 2.87 2.87 0 01-2.87-2.87 2.87 2.87 0 012.87-2.88 2.87 2.87 0 012.87 2.88z')
           path(d='M-398.1 132.5a.94.94 0 01-.93.93.94.94 0 01-.94-.93.94.94 0 01.94-.94.94.94 0 01.94.94z' fill='#fff')
         g.cloud__mouth.cloud__mouth--sad
-          path(d='M-417.09 138.7a4.02 3.28 0 010-.09 4.02 3.28 0 014.02-3.27 4.02 3.28 0 014.02 3.27h0a4.02 3.28 0 010 .09' fill='none' stroke='#000' stroke-width='1.32' stroke-linecap='round' stroke-linejoin='round')
-        //- g.cloud__mouth.cloud__mouth--happy
-        //-   path(d='M-409.05 135.35a4.02 3.28 0 010 .08 4.02 3.28 0 01-4.02 3.28 4.02 3.28 0 01-4.02-3.28h0a4.02 3.28 0 010-.08' fill='none' stroke='#000' stroke-width='1.32' stroke-linecap='round' stroke-linejoin='round')
+          path(d='M-417.09 138.7a4.02 3.28 0 010-.09 4.02 3.28 0 014.02-3.27 4.02 3.28 0 014.02 3.27h0a4.02 3.28 0 010 .09' fill='none' stroke-linecap='round' stroke-linejoin='round')
+        g.cloud__mouth.cloud__mouth--happy(style='display: none;')
+          path(d='M-409.05 135.35a4.02 3.28 0 010 .08 4.02 3.28 0 01-4.02 3.28 4.02 3.28 0 01-4.02-3.28h0a4.02 3.28 0 010-.08' fill='none' stroke-linecap='round' stroke-linejoin='round')
+      g.cloud__cheeks(transform='translate(494.14 30.3)')
         g.cloud__cheek.cloud__cheek--left
           circle(cx='-439.04' cy='136.66' r='2.71' fill='#faa' fill-opacity='.5')
         g.cloud__cheek.cloud__cheek--right
