--- a/src/party-cubes/style.styl
+++ b/src/party-cubes/style.styl
@@ -41,7 +41,9 @@ body
   transform-style preserve-3d
 
   .letter
-    animation rotate calc(var(--duration) * 4s) calc((var(--stagger, 0) * var(--index, 0)) * 1s) ease infinite
+    // FLIP ROTATE ALTERNATE
+    // animation rotate calc(var(--duration) * 4s) calc((var(--stagger, 0) * var(--index, 0)) * 1s) ease infinite
+    animation rotate calc(var(--duration) * 2s) calc((var(--stagger, 0) * var(--index, 0)) * 1s) ease infinite
 
 
 .letter
@@ -98,13 +100,22 @@ body
   bottom 0
   transform-style preserve-3d
 
+// FLIP ROTATE ALTERNATE
+// @keyframes rotate
+//   0%, 30.625%
+//     transform rotateX(0deg)
+//   33.125%, 81.625%
+//     transform rotateX(90deg)
+//   83.125%, 100%
+//     transform rotateX(180deg)
+
 @keyframes rotate
-  0%, 30.625%
+  0%, 15%
     transform rotateX(0deg)
-  33.125%, 81.625%
-    transform rotateX(90deg)
-  83.125%, 100%
-    transform rotateX(180deg)
+  20%, 65%
+    transform rotateX(270deg)
+  70%, 100%
+    transform rotateX(540deg)
 
 @keyframes jump
   0%, 50%, 100%
