feat: add reverse stagger to css animation-delay demo

--- a/src/css-animation-delays/dev.pug
+++ b/src/css-animation-delays/dev.pug
@@ -3,12 +3,14 @@ h1 Delay
 h1 Negative Delay
 h1 Staggered
 h1 Staggered w/ Negative Delay
-h1 Staggered w/ Alternate Direction
+h1 Reverse Stagger
+h1 Reverse Stagger w/ Negative Delay
 p Animate simulataneously with no delay
 p Animate simulataneously with a delay
 p Animate simulataneously with a negative delay
 p Use a variable to create a stagger
 p Use an offset to make the delays negative so that the elements retain stagger but don't stagger in
+p Use the total amount of blocks to reverse the stagger
 p Use a negative coefficient to create a stagger in the opposite direction
 pre
   code .block {
@@ -32,6 +34,10 @@ pre
   code }
 pre
   code .block {
+  code   animation-delay: calc((5 - var(--index)) * 0.25s);
+  code }
+pre
+  code .block {
   code   animation-delay: calc(var(--index) * -0.25s);
   code }
 .container
@@ -40,4 +46,4 @@ pre
     .block(style=`--index: ${b};`)
     - b++
 
-input(type='range', min="0", max="5", value="0")
+input(type='range', min="0", max="6", value="0")
